# CompilerJS

./: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h  codegen  codegen.s  main.cpp
AST/: ArrayExprAST.h  BinaryExprAST.h  ExprAST.h  FunctionAST.cpp  FunctionAST.h  NumberExprAST.h  PrototypeAST.h  VariableExprAST.h
EnumSwitch/: TokenTypeSwitch.cpp  TokenTypeSwitch.h
Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
Parser/: CallExpression.cpp  CallExpression.h  Expression.h  Factor.cpp  Factor.h  NumberExpression.cpp  NumberExpression.h  Parser.cpp  Parser.h  Terminal.h  VariableExpression.cpp  VariableExpression.h
Parser/AST/: ArrayExprAST.cpp  ArrayExprAST.h  BinaryExprAST.h  BodyAST.cpp  BodyAST.h  CallExprAST.h  ConsoleLogExprAST.cpp  ConsoleLogExprAST.h  ExprAST.h  FunctionAST.h  IfAST.cpp  IfAST.h  NumberExprAST.h  PrototypeAST.cpp  PrototypeAST.h  ReturnExprAST.cpp  ReturnExprAST.h  StringExprAST.cpp  StringExprAST.h  VariableArrayExprAST.cpp  VariableArrayExprAST.h  VariableExprAST.h  WhileAST.cpp  WhileAST.h
Parser/__test__/: parser.cpp
Table/: Identifier.h  Table.h
js/: 1.js  chisl.js  main.js  min.js  nod.js  substr.js
